--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ Version:	1.1
 	+ Main Menu
 	+ Search
 * Hero banner CSS
-* intro CSS
+* schedule CSS
 * Feautes CSS
 * Fun Facts CSS
 * Why Choose CSS
@@ -644,20 +644,20 @@ body{
 =============================*/
 
 /*=============================
-	Start intro CSS
+	Start schedule CSS
 ===============================*/
-.intro {
+.schedule {
 	background: #fff;
 	margin: 0;
 	padding: 0;
 	height: 230px;
 }
-.intro .intro-inner {
+.schedule .schedule-inner {
 	position: relative;
 	transform: translateY(-50%);
 	z-index:9;
 }
-.intro .single-intro {
+.schedule .single-schedule {
 	position: relative;
 	text-align: left;
 	z-index:3;
@@ -669,13 +669,13 @@ body{
     -o-transition: all .3s ease-out 0s;
     transition: all .3s ease-out 0s;
 }
-.intro .single-intro .inner {
+.schedule .single-schedule .inner {
 	overflow:hidden;
 	position: relative;
 	padding:30px;
 	z-index:2;
 }
-.intro .single-intro:before{
+.schedule .single-schedule:before{
 	position: absolute;
     z-index: -1;
     content: '';
@@ -694,13 +694,13 @@ body{
     -o-transition: all .3s ease-out 0s;
     transition: all .3s ease-out 0s;
 }
-.intro .single-intro:hover:before{
+.schedule .single-schedule:hover:before{
 	opacity: 0.8;
 }
-.intro .single-intro:hover{
+.schedule .single-schedule:hover{
 	transform: translateY(-5px);
 }
-.intro .single-intro .icon i{
+.schedule .single-schedule .icon i{
 	position: absolute;
 	font-size: 110px;
 	color: #fff;
@@ -715,11 +715,11 @@ body{
 	right: -25px;
 	bottom: -30px;
 }
-.intro .single-intro span{
+.schedule .single-schedule span{
 	display:block;
 	color:#fff;
 }
-.intro .single-intro h4{
+.schedule .single-schedule h4{
 	font-size: 20px;
 	font-weight:600;
 	display:inline-block;
@@ -727,18 +727,18 @@ body{
 	color:#fff;
 	margin-top:13px;
 }
-.intro .single-intro p{
+.schedule .single-schedule p{
 	color:#fff;
 	margin-top:22px;
 }
-.intro .single-intro a {
+.schedule .single-schedule a {
 	color: #fff;
 	margin-top: 25px;
 	font-weight: 500;
 	display: inline-block;
 	position: relative;
 }
-.intro .single-intro a:before{
+.schedule .single-schedule a:before{
 	position:absolute;
 	content:"";
 	left:0;
@@ -750,39 +750,39 @@ body{
 	-moz-transition:all 0.4s ease;
 	transition:all 0.4s ease;
 }
-.intro .single-intro a:hover:before{
+.schedule .single-schedule a:hover:before{
 	width:100%;
 	width:100%;
 }
-.intro .single-intro a i{
+.schedule .single-schedule a i{
 	margin-left:10px;
 }
-.intro .single-intro .time-sidual{
+.schedule .single-schedule .time-sidual{
 	
 }
-.intro .single-intro .time-sidual{
+.schedule .single-schedule .time-sidual{
 	overflow:hidden;
 	margin-top:17px;
 }
-.intro .single-intro .time-sidual li {
+.schedule .single-schedule .time-sidual li {
 	display: block;
 	color: #fff;
 	width: 100%;
 	margin-bottom:3px;
 }
-.intro .single-intro .time-sidual li:last-child{
+.schedule .single-schedule .time-sidual li:last-child{
 	margin:0;
 }
-.intro .single-intro .time-sidual li span{
+.schedule .single-schedule .time-sidual li span{
 	display:inline-block;
 	float:right;
 }
-.intro .single-intro .day-head .time {
+.schedule .single-schedule .day-head .time {
 	font-weight: 400;
 	float: right;
 }
 /*=============================
-	End intro CSS
+	End schedule CSS
 ===============================*/
 
 /*=============================
