--- a/style.css
+++ b/style.css
@@ -4468,8 +4468,8 @@ body {
 @media screen and (max-width: 768px) {
 	.header-inner .row {
 		flex-direction: column;
-		align-items: center;
-		text-align: center;
+		align-items: flex-start;
+		text-align: left;
 	}
 
 	.logo {
